deploy/base/network/allow-to-hello.yaml
# Generated by vikrant v0.1.0 from service.yaml. Do not edit: platform-owned.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: frontend
    app.kubernetes.io/managed-by: vikrant
  name: allow-to-hello
  namespace: frontend
spec:
  egress:
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hello
      podSelector:
        matchLabels:
          app: hello
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
